feat: Add user authentication and settings management
Introduces user authentication capabilities, including login, logout, registration, and password management. This update also incorporates management for shop settings and enhances the AI service to generate more context-aware invoice messages. The project now includes bcryptjs for secure password hashing and updates the data structures to support new user and settings information.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     "recharts": "https://esm.sh/recharts@^3.5.1",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
-    "xlsx": "https://esm.sh/xlsx@0.18.5"
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "bcryptjs": "https://esm.sh/bcryptjs@2.4.3"
   }
 }
 </script>
